# i8080ls

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: code_elements.rs  data_types.rs  err.rs  handler.rs  lexer.rs  lib.rs  main.rs  parser.rs  symbol.rs
test/: Cargo.toml
test/src/: data_types.rs  lib.rs  main.rs
