[package]
name = "my_test_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
futures = "0.3.32"
rustc-hash = "2.1.2"
serde_json = "1.0.149"
tokio = {
    version = "1.52.1",
    features = [
        "io-std",
        "io-util",
        "rt-multi-thread",
        "macros",
        "net",
    ],
}
tower-lsp-server = "0.23.0"
tower-service = "0.3.3"
